WebSocketClientを利用してレスポンスを受け取る機能を実装

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="jp.co.spajam.honsenapp" >
 
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="jp.co.spajam.honsenapp.YellApplication"
