--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jp.co.spajam.honsenapp" >
 
+    <!-- 音声 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <!-- 位置情報 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name="jp.co.spajam.honsenapp.YellApplication"
