--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name="jp.co.spajam.honsenapp.YellApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_megaphone"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
